--- a/localisation/KR_Yunnan_l_simp_chinese.yml
+++ b/localisation/KR_Yunnan_l_simp_chinese.yml
@@ -2,30 +2,55 @@
  YUN_original_tree:0 "滇系国策树"
  YUN_Swapped_tree:0 "滇系国策树"
  YUN_KMT_United_Tree:0 "滇系国策树"
- POLITICS_YUNNAN_TANG_JIYAO_DESC:0 "作为蔡锷将军的坚定支持者，唐继尧的政治生涯自从1911年开始，追随蔡锷的命令投身武昌起义，响应辛亥革命。当革命成功后，他担任贵州督理，回到故乡云南顶替蔡锷留下的空位。当袁世凯宣布复辟时，唐继尧迅速在蔡锷和李烈钧的支持下反对袁世凯，他们几人共同起兵，护国讨袁，当在护国战争中得胜后，云南已成为了神州大地上的又一强力军阀。\n\n自此，云南的辉煌时代也就此落幕。唐继尧的军队之后屡战屡败，1921年，唐继尧败走四川，还差点被顾品珍推翻。但是北伐失败却救了人在云南的唐继尧。残存的国民党员和唐继尧手上军队让德国干涉军和直系军阀不敢对这个反清省份轻举妄动。但是，唐继尧自己野心勃勃又浮躁的性格，使得不少云南军官并不喜欢他，因此他对云南省的控制力实际上要比外人想的要弱得多。"
- POLITICS_YUNNAN_ZHU_PEIDE_DESC:0 "朱培德出身于禄丰的名门望族，其祖上曾经先后效忠于明清两朝。虽然他的祖先如此数代，但是朱培德却是一个学富五车的革命者，他与孙中山共事，投身于三民主义事业，当国民党北伐战败，朱培德只能与国民革命军第三军的残兵败将们撤退到了故乡云南，并为唐继尧效力。\n唐继尧政府倒台后，朱培德抓住机会，他公开谴责新军阀龙云，并和他的战友们共同西进并接管了昆明。如今，朱培德稳坐云南首府，他立誓要继承孙中山的遗志，重建中华之国民政府。"
- POLITICS_YUNNAN_LU_HAN_DESC:0 "早就有流言传闻说，卢汉是龙云的同父异母或者同母异父的兄弟，这或许解释了为什么他们两个之前的亲密的同志关系。但不论这谣言是真是假，不论他们两人之前的情谊有多么深，都不能阻止卢汉见机行事。这位年轻的彝族将领曾在中国国民党任职，并且与印度支那的越南国民党作战过，这些经验足以让卢汉现在率部对他曾经的战友发动一场大胆的政变。卢汉现在拼命地在昆明集结力量，并且对即将来临的风暴未雨绸缪。然而，他身边的人却在想，一个连自己好兄弟都能背叛的人，真的可以信赖吗？"
- POLITICS_YUNNAN_HU_RUOYU_DESC:0 "新的政权风雨飘摇，曾经推翻唐继尧的人们如今正兵戎相向。此时胡若愚先下手为强，带着他的一众部下夺下了云南首府。跟同龄人不同，胡若愚出身知识份子地主家庭，可是却对二十世纪初的革命政治十分着迷。在唐继尧的麾下，他在滇军中节节攀升，最后在滇军参谋部中谋得一职。凭他优厚的财力和他与昆明滇军军官们的关系，胡若愚来了一把豪赌，他要赶走并逮捕他的同事们，并宣布自己是云南的新大王。如今，时间将证明此举的风险有多大……"
- POLITICS_YUNNAN_LONG_YUN_DESC:0 "年轻时的龙云在云南讲武堂深造时，受到了持反清观点同学的影响。他因此参加了当地民兵并投身辛亥革命，一路扶摇直上，最终成为了割据云南的军阀，唐继尧麾下的第五军军长。他的晋升之路也得益于与他的上级兼表兄弟卢汉间亲密的友谊。不过，受革命失败和政见对立的影响，二人间的友谊也将因此改变。龙云一路走来，既有牺牲，也曾遭人暗算，也有不少遗憾，但今时不同往日，云南王已经崛起，云南军人们有了新的上司。\n龙云对云南的控制不是很强，但他意志坚定，野心勃勃，云南王可不是好当的，他可能会在日后像他的前任一样，被自己的下属推翻。身为彝族，民族背景只能用来改善他的军政府与他血亲们的关系，而对他的军旅生涯毫无帮助。身为实用主义者，汉族政治中的异类，这位野心勃勃的云南之龙，可能将是神州大地之上的又一霸主。"
- POLITICS_YUNNAN_ZHU_DE_DESC:0 "朱德是白手起家的典型人物，当年在四川的农村中，朱德不过是一个无足轻重的当地贫农，一个一无所有的佃农。当他9岁时，他被一个有钱的叔叔收养，随后被送到了云南讲武堂深造。在讲武堂读书时，他加入了国民党的前身，也就是同盟会。接下来，朱德在动乱的中国四处漂泊，跟随国民革命军于各条战线上奋战，他为各个派系尽忠，也认识了不少人。他曾经到过四川，去过上海和西藏，甚至还在柏林留过学，而冥冥中的天意将他带回云南。最近他威胁到了云南军阀唐继尧的统治，因此被迫辞去了在国民革命军中的职务，由于不想再次离家出走四处漂泊，朱德只好承诺不问政事。\n朱德原本以为他未来的结局就是在云南讲武堂中靠当教官度过余生，但唐继尧倒台和云南大乱的消息让他重燃斗志。朱德的目标很简单，他要成为比云南曾经的独裁军头更出色的领导人，他要在云南，建立起他所钻研的、教导的、那个无比理想、集道德和责任于一身的民主制度。"
+
  POLITICS_YUNNAN_LI_XIN_DESC:0 "李鑫中学就读于昆明的一所德国私立学校，成年后在全国多所大学学习。他首先就读于南京东南大学农学系，后来转学到北京农业大学。在京期间，他对外国政治思想越来越感兴趣，研究俄国失败的布尔什维克运动和欧洲现在兴起的工团主义。20世纪20年代，他越来越倾向工团主义，后来在大学里与其他进步学生组成一个名为“革新社”（后称新滇社）的政治组织，以推广左派观点。1926年毕业后，他前往广州，参加了中国共产党和国民党左派举办的农业社会主义讲座。尽管李鑫此时倾向工团主义，但他还是接受了来自中共代表的邀请，加入共产党，并协助中共在云南组织一场政治运动。这个被称为“中共云南特支”的组织最初打算与其上级合作，但在北伐失败后失去了与组织的联系。\n作为该组织的关键人物之一，李鑫开始运用主张社会革新的思想，在昆明市中心建立了一个由工团激进分子组成的地下组织。这导致忠于云南特支的中共原始信仰与李鑫的工团主义之间的巨大分歧，最终李鑫成立了作为独立团体的“新滇社”（或“新社会”）。尽管李鑫有革命信念，但他还是设法不被唐继尧政府注意到。最初，云南的几个军阀都知道他的左派信仰，但没有理由迫害一个普通的农业学家。当李鑫前往云南个旧锡矿，希望将工人组织成工会时，一切都改变了。他甚至把自己伪装成一名矿工，努力工作，希望能更接近无产阶级。在1929年组织了一次罢工运动后，李被逮捕险些被处决，这迫使他躲藏起来。在那之后，他继续扩大他的政治影响力，希望再次团结云南工人，向军阀表明权力掌握在无产阶级手中。"
  POLITICS_YUNNAN_WANG_FUSHENG_DESC:0 "在被北京大学文科预科班录取之前，王复生的生活平淡无奇。他很早就开始与激进的学生团体交往，结识了几位有影响力的人物，如李鑫和李大钊。尽管他的许多同志广泛研究了席卷欧洲和美国的新兴工团主义运动，但他仍然是一个坚定的马克思主义者。后来，他加入了李鑫的“革新社”，这是一个左翼团体，在北京大学推广社会主义意识形态。在这段时间里，他目睹了他的许多同志被北京政府镇压、逮捕甚至处决，使他走上了复仇和专制的道路。和他的同志李鑫一样，他会见了中国共产党和国民党左派的成员，并被指示返回云南组织社会主义者。通过建立一个能够煽动革命的中共“云南特别支部”，以推翻军阀唐继尧对西南地区的控制。\n\n然而，北伐失败后，这个特殊支部几乎被消灭，它在共产党和国民党左派中的上级最终烟消云散。对他来说最糟糕的是，他曾经的同志现在开始攻击他。拒绝追随曾经的信仰，开始团结在李鑫的工团主义观点周围。他十分愤怒，夺取了云南特支的领导权，并将李鑫驱逐出去。在他担任地下革命协会领导人期间，他努力恢复与国民党或共产党残余势力的联系，并继续在中国进行斗争。经过多年的沉默和失败，他终于找到了他们。中特局通过一系列秘密会议、加密信息和冒险计划，恢复了云南特别支部原来的宗旨：煽动反对云南军阀的革命。尽管有了新的领导，与老同志们分道扬镳，但王复生仍然致力于最初的目标，那就是发起革命。"
  POLITICS_YUNNAN_Bai_Chongxi_DESC:0 "白崇禧是一位回族穆斯林，他自称祖先是定居于四川的波斯商人。他曾经在广西陆军小学堂，当时正赶上军队内部改革，因此他在学校学到了很多现代军事战术思想。而当他在广西学生军中服役时，他将这些知识学以致用，随后成为了军阀时代名声最为显赫的将领之一。作为孙中山提倡的三民主义中国愿望的忠实支持者，他是著名的新桂系三巨头之一，是陆荣廷的眼中钉。但是，北伐失败和德国干涉军导致他们的梦想破灭，新桂系仓皇逃往云南。此后，白崇禧致力于培养新一代军官，他将把他在广西学到的知识与战术以及北伐失败的惨痛教训传授给这些年轻的军士。"
+ YUN_tang_jiyao: "唐继尧"
+ POLITICS_YUNNAN_TANG_JIYAO_DESC:0 "作为蔡锷将军的坚定支持者，唐继尧的政治生涯自从1911年开始，追随蔡锷的命令投身武昌起义，响应辛亥革命。当革命成功后，他担任贵州督理，回到故乡云南顶替蔡锷留下的空位。当袁世凯宣布复辟时，唐继尧迅速在蔡锷和李烈钧的支持下反对袁世凯，他们几人共同起兵，护国讨袁，当在护国战争中得胜后，云南已成为了神州大地上的又一强力军阀。\n\n自此，云南的辉煌时代也就此落幕。唐继尧的军队之后屡战屡败，1921年，唐继尧败走四川，还差点被顾品珍推翻。但是北伐失败却救了人在云南的唐继尧。残存的国民党员和唐继尧手上军队让德国干涉军和直系军阀不敢对这个反清省份轻举妄动。但是，唐继尧自己野心勃勃又浮躁的性格，使得不少云南军官并不喜欢他，因此他对云南省的控制力实际上要比外人想的要弱得多。"
  POLITICS_YUNNAN_TANG_JIYAO_ARMY_DESC:0 "§Y指挥官介绍\n§Y生于：§L\n1893年8月14日\n大清帝国，云南，曲靖\n§Y军旅生涯：§L\n唐继尧是蔡锷将军的忠实追随者，1911年蔡锷命令他参加武昌起义——辛亥革命的开端，从此开始了他的政治生涯。革命成功后，他就任贵州都督，并于1913年继蔡锷出任云南都督。在袁世凯宣布复辟后，唐继尧在蔡锷和李烈钧等人支持下立即宣布云南独立，他们与唐继尧一起领导护国战争。护国战争胜利后，云南成为中华大地的主要霸权之一。\n\n在那之后，云南的辉煌时代不再。唐继尧领导了一次又一次失败的远征，在1921年四川战役失败后，从前线归来的滇系将领顾品珍发动政变驱逐唐继尧。但是北伐失败却救了人在云南的唐继尧。国民革命军残部和唐继尧手上军队让德国干涉军和直系军阀不敢对这个反清省份轻举妄动。但是，唐继尧自己野心勃勃又浮躁的性格，使得不少云南军官并不喜欢他，因此他对云南省的控制力实际上要比外人想的要弱得多。"
- POLITICS_YUNNAN_ZHU_PEIDE_ARMY_DESC:0 "§Y指挥官介绍\n§Y生于：§L\n1888年\n大清帝国，云南，禄丰\n§Y军旅生涯：§L\n朱培德出身于禄丰的名门望族，其祖上曾经先后效忠于明清两朝。虽然他的祖先如此数代，但是朱培德却是一个学富五车的革命者，他与孙中山共事，投身于三民主义事业。他曾短暂地担任过江西省主席，在国民党中度过了漫长的职业生涯。在北伐失败后，朱培德被迫与国民革命军第三军的残兵败将们撤退到了故乡云南，并为唐继尧效力。"
- POLITICS_YUNNAN_LU_HAN_ARMY_DESC:0 "§Y指挥官介绍\n§Y生于：§L\n1895年\n大清帝国，云南，昭通\n§Y军旅生涯：§L\n早就有流言传闻说，卢汉是龙云的同父异母或者同母异父的兄弟，这或许解释了为什么他们两个之前的亲密的同志关系。这位年轻的彝族将领曾在中国国民党任职，并且与越南国民党作战过。"
- POLITICS_YUNNAN_HU_RUOYU_ARMY_DESC:0 "§Y指挥官介绍\n§Y生于：§L\n1894年\n大清帝国，云南，罗平\n§Y军旅生涯：§L\n跟同龄人不同，胡若愚出身知识份子地主家庭，可是却对二十世纪初的革命政治十分着迷。在唐继尧的支持下，他在滇军中节节攀升，最后在滇军参谋部中谋得一职。"
+ POLITICS_YUNNAN_TANG_KING_DESC:0 "唐继尧曾经是蔡锷将军的忠实追随者，现在他已和自己的老朋友和过去的心境一刀两断，开始追求自己的辉煌，誓要打下自己的中华江山。他放弃了与国民党和联省主义者的联系，因为这些傻瓜除了背叛他外什么也不会做。在鸦片与神妙的幻境的推动下，唐继尧宣布自己是云南王和旧唐的合法继承者。过去灾难性的北伐与面对国民革命军的败绩困扰着他过去十年的军事生涯，但唐继尧现在比以往任何时候都坚定地想要纠正过去的错误，恢复名誉，新建皇朝。这位云南王已磨砺意志，下定决心，将从昆明的山区策马奔驰而出，夺回自己与生俱来的权利——或者殒命其中。困守群山之中，灰心丧气地等待寿命大限的时期早已过去——现在是胜利、凯旋和复仇的时候了！"
+ POLITICS_YUNNAN_TANG_EMPEROR_DESC:0 "曾经的云南王实现了不可能的伟业——全中国现在都在他的龙座之下，曾经占据中华大地的军阀和篡位者皆已伏法，屈膝于前。唐继尧登上了属于自己的龙椅，为纪念旧唐的开国皇帝，自命高祖。大唐如今再次统治全中国，骄傲的道家后裔居于众人之上。虽然经过了一场场艰苦的战争，人民血流成河，但随着唐高祖巩固自己的新帝国，中国可能再次迎来和平与繁荣。"
+ YUN_zhu_peide: "朱培德"
+ POLITICS_YUNNAN_ZHU_PEIDE_DESC:0 "§Y生于：§!§L1888年；大清帝国、云南省禄丰§!\n§Y背景：§!§L朱培德出身于禄丰的名门望族，其祖上曾经先后效忠于明清两朝。虽然他的祖先如此数代，但是朱培德却是名学富五车的革命者，他与孙中山共事，投身于三民主义事业。朱培德短暂担任过江西省长，为国民党工作了很长一段时间。当国民党北伐战败，朱培德只能与国民革命军第三军的残兵败将们撤退到了故乡云南，并为唐继尧效力。\n唐继尧政府倒台后，朱培德抓住机会，他公开谴责新军阀龙云，并和他的战友们共同西进并接管了昆明。如今，朱培德稳坐云南首府，他立誓要继承孙中山的遗志，重建中华之国民政府。§!"
+ POLITICS_YUNNAN_ZHU_PEIDE_ARMY_DESC:0 "§Y生于：§!§L1888年；大清帝国、云南省禄丰§!\n§Y背景：§!§L朱培德出身于禄丰的名门望族，其祖上曾经先后效忠于明清两朝。虽然他的祖先如此数代，但是朱培德却是名学富五车的革命者，他与孙中山共事，投身于三民主义事业。朱培德短暂担任过江西省长，为国民党工作了很长一段时间。当国民党北伐战败，朱培德只能与国民革命军第三军的残兵败将们撤退到了故乡云南，并为唐继尧效力。§!"
+ YUN_lu_han: "卢汉"
+ POLITICS_YUNNAN_LU_HAN_DESC:0 "早就有流言传闻说，卢汉是龙云的同父异母或者同母异父的兄弟，这或许解释了为什么他们两个之前的亲密的同志关系。但不论这谣言是真是假，不论他们两人之前的情谊有多么深，都不能阻止卢汉见机行事。这位年轻的彝族将领曾在中国国民党任职，并且与印度支那的越南国民党作战过，这些经验足以让卢汉现在率部对他曾经的战友发动一场大胆的政变。卢汉现在拼命地在昆明集结力量，并且对即将来临的风暴未雨绸缪。然而，他身边的人却在想，一个连自己好兄弟都能背叛的人，真的可以信赖吗？"
+ POLITICS_YUNNAN_LU_HAN_ARMY_DESC:0 "§Y指挥官介绍\n§Y生于：§L\n1895年\n大清帝国，云南，昭通\n§Y军旅生涯：§L\n早就有流言传闻说，卢汉是龙云的同父异母或者同母异父的兄弟，这或许解释了为什么他们两个之前的亲密的同志关系。但不论这谣言是真是假，不论他们两人之前的情谊有多么深，都不能阻止卢汉见机行事。这位年轻的彝族将领曾在中国国民党任职。"
+ YUN_hu_ruoyu: "胡若愚"
+ POLITICS_YUNNAN_HU_RUOYU_DESC:0 "新的政权风雨飘摇，曾经推翻唐继尧的人们如今正兵戎相向。此时胡若愚先下手为强，带着他的一众部下夺下了云南首府。跟同龄人不同，胡若愚出身知识份子地主家庭，可是却对二十世纪初的革命政治十分着迷。在唐继尧的麾下，他在滇军中节节攀升，最后在滇军参谋部中谋得一职。凭他优厚的财力和他与昆明滇军军官们的关系，胡若愚来了一把豪赌，他要赶走并逮捕他的同事们，并宣布自己是云南的新大王。如今，时间将证明此举的风险有多大..."
+ POLITICS_YUNNAN_HU_RUOYU_ARMY_DESC:0 "§Y生于：§!§L1894年；大清帝国、云南省罗平§!\n§Y背景：§!§L跟同龄人不同，胡若愚出身优越的知识分子地主家庭，但却被二十世纪席卷华夏的革命政治而吸引。在唐继尧的栽培下，他在滇军中一路高升，最终在昆明的滇军参谋部中谋得了一份美差。§!"
+ YUN_long_yun: "龙云"
+ POLITICS_YUNNAN_LONG_YUN_DESC:0 "年轻时的龙云在云南讲武堂深造时，受到了持反清观点同学的影响。他因此参加了当地民兵并投身辛亥革命，一路扶摇直上，最终成为了割据云南的军阀，唐继尧麾下的第五军军长。他的晋升之路也得益于与他的上级兼表兄弟卢汉间亲密的友谊。不过，受革命失败和政见对立的影响，二人间的友谊也将因此改变。龙云一路走来，既有牺牲，也曾遭人暗算，也有不少遗憾，但今时不同往日，云南王已经崛起，云南军人们有了新的上司。\n龙云对云南的控制不是很强，但他意志坚定，野心勃勃，云南王可不是好当的，他可能会在日后像他的前任一样，被自己的下属推翻。身为彝族，民族背景只能用来改善他的军政府与他血亲们的关系，而对他的军旅生涯毫无帮助。身为实用主义者，汉族政治中的异类，这位野心勃勃的云南之龙，可能将是神州大地之上的又一霸主。" 
  POLITICS_YUNNAN_LONG_YUN_ARMY_DESC:0 "§Y指挥官介绍\n§Y生于：§L\n1894年\n大清帝国，云南，昭通\n§Y军旅生涯：§L\n年轻时的龙云在云南讲武堂深造时，受到了持反清观点同学的影响。他因此参加了地方民兵组织并投身辛亥革命，一路扶摇直上，最终成为了云南军阀唐继尧麾下的第五军军长。身为彝族，民族背景只能用来改善他的军政府与他血亲们的关系，而对他的军旅生涯毫无帮助。身为实用主义者，汉族政治中的异类，这位野心勃勃的云南之龙，可能将是神州大地之上的又一霸主。"
+ YUN_zhu_de: "朱德"
+ POLITICS_YUNNAN_ZHU_DE_DESC:0 "朱德是白手起家的典型人物，当年在四川的农村中，朱德不过是一个无足轻重的当地贫农，一个一无所有的佃农。当他9岁时，他被一个有钱的叔叔收养，随后被送到了云南讲武堂深造。在讲武堂读书时，他加入了国民党的前身，也就是同盟会。接下来，朱德在动乱的中国四处漂泊，跟随国民革命军于各条战线上奋战，他为各个派系尽忠，也认识了不少人。他曾经到过四川，去过上海和西藏，甚至还在柏林留过学，而冥冥中的天意将他带回云南。最近他威胁到了云南军阀唐继尧的统治，因此被迫辞去了在国民革命军中的职务，由于不想再次离家出走四处漂泊，朱德只好承诺不问政事。\n朱德原本以为他未来的结局就是在云南讲武堂中靠当教官度过余生，但唐继尧倒台和云南大乱的消息让他重燃斗志。朱德的目标很简单，他要成为比云南曾经的独裁军头更出色的领导人，他要在云南，建立起他所钻研的、教导的、那个无比理想、集道德和责任于一身的民主制度。"
  POLITICS_YUNNAN_ZHU_DE_ARMY_DESC:0 "§Y指挥官介绍\n§Y生于：§L\n1886年12月1日\n大清帝国，四川，仪陇\n§Y军旅生涯：§L\n朱德是白手起家的典型人物，当年在四川的农村中，朱德不过是一个无足轻重的当地贫农，一个一无所有的佃农。九岁时，他被一个有钱的叔叔收养，随后被送到了云南讲武堂深造。在读期间，他加入了国民党的前身——同盟会。接下来，朱德在动乱的中国四处漂泊，跟随国民革命军在各条战线上奋战，为各个派系服务，并结识了广大的人脉。他曾经到过四川，去过上海和西藏，甚至还在柏林留过学，而冥冥中的天意将他带回云南。近年来，他与军阀唐继尧的专制主义发生了冲突，被迫辞去了在国民革命军中的职务，由于不想再次离家出走四处漂泊，朱德只好承诺不问政事。\n朱德的目标很简单，就是在云南建立一个他梦寐以求的负责的民主制度。"
- POLITICS_YUNNAN_JIN_HANDING_ARMY_DESC:0 "§Y指挥官介绍\n§Y生于：§L1887年\n大清帝国 云南 玉溪\n§Y军旅生涯：§L\n金汉鼎作为蔡锷将军攻打四川期间的得力干将，曾经前途无比光明。1922年，为铺平北伐的道路，他被任命为云南代理省长。但在他任职仅一个月后，就被唐继尧逼宫下野。被赶下云南省长一职的他决定加入蒋介石的部队，可国民党的失败则再度打破了金汉鼎的雄心壮志。意想不到的是，在他以为自己就要一声不吭的流亡国外时，唐继尧却在满清复辟后向他伸出了橄榄枝，邀请他回到昆明。共和派缺少有经验的军官，因此唐继尧和金汉鼎不得不放下对彼此的成见，为不可避免的北伐做准备。当这群民主派舔舐伤口时，金汉鼎在闲暇之余还遇上了他的几个老相识，比如他的军校同学朱德。除了军官的身份，金汉鼎还是一名著名的禁言者，他在国民革命军中掀起了一次大规模的禁酒、禁烟、禁鸦片的政治运动。"
- POLITICS_YUNNAN_LUO_BINGHUI_ARMY_DESC:0 "§Y指挥官介绍\n§Y生于：§L1897年12月12日\n大清帝国 云南 昭通\n§Y军旅生涯：§L\n贫农之子罗炳辉从小就对地主、剥削者和资本家充满痛恨，也因此名声大噪。尽管他个性叛逆，但他还是加入了军队，并成为了一名著名而忠诚的滇军战士。在此期间，他得到了唐继尧的青睐，因此得以在国民革命军一路高升，最终成为了孙中山先生的保镖。在北伐期间，他负伤入院，也因此躲过了北伐灾难性的失败。康复后，他加入了同在云南的同僚们，凭他与唐继尧的友谊，他轻松的进入了滇军高层。"
- POLITICS_YUNNAN_TANG_HUAIYUAN_ARMY_DESC:0 "§Y指挥官介绍\n§Y生于：§L1886年\n大清帝国 云南省 玉溪\n§Y军旅生涯：§L\n唐淮源自幼丧父，但他出众的才智和好学的天性让他得到了清政府官员们的欣赏，也使他就此告别了贫困潦倒的生活。唐淮源被推荐到了云南陆军讲武堂，并成为了那里著名的天才学员。虽然他参加了北伐战争，但是他并没有到第一线去，相反，他一直在国民革命军中担任教官和军事理论家。与他的许多战友一样，当蒋介石的死讯从前线传来时，逃往了云南。虽然他更习惯于研究战略理论和担任教官工作，但近日，滇系军阀唐继尧已经敦促唐淮源尽快回到军官队伍中服役。"
- POLITICS_YUNNAN_FAN_SHISHENG_ARMY_DESC:0 "§Y指挥官介绍\n§Y生于：§L1891年\n大清帝国 云南 玉溪\n§Y军旅生涯：§L\n与大部分滇军军官不同，范石生并非军人出身。他曾是中医，还当过教师，直到他的世交李鸿祥介绍入新军蔡锷部任文书。他就此醉心于革命运动，弃笔从戎，加入蔡锷的麾下，可国民党人为了统一中国而一路进行不断的战争与失败，让范石生最终从军中退役，返回云南，在昆明当起了医生。原本的他将远离政治，归于平凡，直到范石生引起了唐继尧的注意。他们二人在革命时期就是老相识了，唐继尧也成功说服他的老战友重返军队。现在，范石生把他的长袍和人力车换成了军服和步枪，投身正在恢复元气的共和运动。"
- POLITICS_YUNNAN_YANG_JIE_ARMY_DESC:0 "§Y指挥官介绍\n§Y生于：§L1889年\n大清帝国 云南 大理\n§Y军旅生涯：§L\n"
- POLITICS_YUNNAN_ZHANG_LINGFU_ARMY_DESC:0 "§Y指挥官介绍\n§Y生于：§L1893年8月20日\n大清帝国 陕西 西安\n§Y军旅生涯：§L\n"
- POLITICS_YUNNAN_ZHOU_BAOZHONG_ARMY_DESC:0 "§Y指挥官介绍\n§Y生于：§L1902年2月7日\n大清帝国 云南 大理\n§Y军旅生涯：§L\n"
- POLITICS_YUNNAN_ZENG_ZESHENG_ARMY_DESC:0 "§Y指挥官介绍\n§Y生于：§L1902年\n大清帝国 云南 永善\n§Y军旅生涯：§L\n曾泽生是云南的少壮派共和主义军官之一。1924年自云南陆军讲武堂毕业后，又在广州加入了国民党，进入黄埔军校继续深造。但是出于对国民党内部腐败的失望，毕业后他又迁往了上海。1929年，他应邀回到云南，在讲武堂担任辅导员，自那时起，他便成了少壮派共和主义军官中进步派的领袖，为反腐倡廉和扫除贫困而奔走。"
- POLITICS_YUNNAN_SUN_YUANLIANG_ARMY_DESC:0 "§Y指挥官介绍\n§Y生于：§L1904年3月17日\n大清帝国 四川 成都\n§Y军旅生涯：§L\n"
+ YUN_jin_handing: "金汉鼎"
+ POLITICS_YUNNAN_JIN_HANDING_ARMY_DESC:0 "§Y生于：§!§L1887年；大清帝国、云南省玉溪县§!\n§Y背景：§!§L金汉鼎作为蔡锷将军攻打四川期间的得力干将，曾经前途无比光明。1922年，为铺平北伐的道路，他被任命为云南代理省长。但在他任职仅一个月后，就被唐继尧逼宫下野。被赶下云南省长一职的他决定加入蒋介石的部队，可国民党的失败则再度打破了金汉鼎的雄心壮志。意想不到的是，在他以为自己就要一声不吭的流亡国外时，唐继尧却在满清复辟后向他伸出了橄榄枝，邀请他回到昆明。共和派缺少有经验的军官，因此唐继尧和金汉鼎不得不放下对彼此的成见，为不可避免的北伐做准备。当这群民主派舔舐伤口时，金汉鼎在闲暇之余还遇上了他的几个老相识，比如他的军校同学朱德。除了军官的身份，金汉鼎还是一名著名的禁烟者，他在国民革命军中掀起了一次大规模的禁酒、禁烟、禁鸦片的政治运动。§!"
+ YUN_chen_cheng: "陈诚"
+ YUN_chen_cheng_high_command_desc:0 "§Y生于：§!§L1898年1月4日；大清帝国、浙江省青田县§!\n§Y背景：§!§L陈诚出生在一户世代耕作的农家。1906年，他进入高市小学读书。1912年，小学毕业的陈诚遭遇了严峻的家庭经济压力，不得不自力更生供给读书。\n\n这种强大的积极性和才能，成为了陈诚一生的鲜明标志。1917年，他未能如愿进入日本陆军士官学校；1918年，他对保定军校的申请也以失败告终，而他并未因此气馁，终于在1920年被保定军校第八期炮兵科录取。同年，直皖战争爆发，陈诚被迫南下，他加入了新成立的广东军第一师第三团，并很快成为了国民党的一员。\n\n在保定军校学习期间，陈诚与国民革命军将领邓演达结下了深厚的师生情谊。他得知邓演达在广州为新军招募军官，就毫不犹豫地放弃了在浙江的见习军官职位，毅然决然地前往上海与老师邓演达汇合。在国民革命军中，陈诚初任第1师第3团的上尉副官和连长，后担任孙中山先生的贴身警卫，并在一次作战中胸部中弹。正是在这次伤愈期间，陈诚遇见了他后来的校长、烈士蒋介石。\n\n陈诚在黄埔军校担任炮兵科教官及炮兵上尉，不久后被任命为国民革命军炮兵第1营第1连连长。他参与了东征，并因其杰出表现获得蒋介石的高度评价，甚至赢得了“三炮”的美誉。\n\n陈诚与蒋介石及邓演达关系密切。而后来，北伐在德军干涉下惨淡收场，蒋介石的遇刺更是火上浇油，使得国民党迅速崩溃。在这样的背景下，陈诚随国民党右派残军撤退至贵州，尽管时局艰难，他仍怀揣着实现孙先生事业的理想。§!"
+ YUN_luo_binghui: "罗炳辉"
+ POLITICS_YUNNAN_LUO_BINGHUI_ARMY_DESC:0 "§Y生于：§!§L1897年12月12日；大清帝国、云南省昭通§!\n§Y背景：§!§L贫农之子罗炳辉从小就对地主、剥削者和资本家充满痛恨，也因此名声大噪。尽管他个性叛逆，但他还是加入了军队，并成为了一名著名而忠诚的滇军战士。在此期间，他得到了唐继尧的青睐，因此得以在国民革命军一路高升，最终成为了孙中山先生的保镖。在北伐期间，他负伤入院，也因此躲过了北伐灾难性的失败。康复后，他加入了同在云南的同僚们，凭他与唐继尧的友谊，他轻松进入了滇军高层。但同时，滇军高层内的腐败不堪让他和国民党人尤其是朱德来往密切。§!"
+ YUN_tang_jiyu: "唐继虞"
+ YUN_tang_jiyu_commander_desc:0 "§Y生于：§!§L1890年；大清帝国、云南省会泽§!\n§Y背景：§!§L唐继虞毕业于云南陆军讲武堂，在1911年的辛亥革命后加入云南陆军，并先后担任过多个领导职务。\n\n其兄长唐继尧升任贵州都督后，唐继虞也随即升任贵州省警察厅厅长。而在唐继尧升任云南都督后，唐继虞又一次忠心耿耿地辅助其兄长，他先后担任云南省会警察厅厅长、全省警务处处长、滇军第7旅旅长、警卫军司令、督署总参谋长、卫戍总司令官兼云南讲武学堂堂长等职。\n\n1923年时，唐继尧派唐继虞出兵贵州，保护云南的利益，不过在那年，唐继尧的首要事务还是出兵救援广西的陆荣廷，不让广西落入国民党之手。1925年，贵州的变局促使唐继虞出兵干预，随后，唐继虞被任命为贵州省代理省长，为滇系的军事扩张捞取资金。\n\n尽管唐继虞现时是滇军总监，但他的军事水平进步空间颇大；在滇系内多数人看来，他之所以能坐上这个位置只因其兄长公然任人唯亲。§!"
+ YUN_tang_huaiyuan: "唐淮源"
+ POLITICS_YUNNAN_TANG_HUAIYUAN_ARMY_DESC:0 "§Y生于：§!§L1886年；大清帝国、云南省玉溪§!\n§Y背景：§!§L唐淮源自幼丧父，但他出众的才智和好学的天性让他得到了清政府官员们的欣赏，也使他就此告别了贫困潦倒的生活。唐淮源被推荐到了云南陆军讲武堂，并成为了那里著名的天才学员。虽然他参加了北伐战争，但是他并没有到第一线去，相反，他一直在国民革命军中担任教官和军事理论家。与他的许多战友一样，当蒋介石的死讯从前线传来时，逃往了云南。虽然他更习惯于研究战略理论和担任教官工作，但近日，滇系军阀唐继尧已经敦促唐淮源尽快回到军官队伍中服役。§!"
+ YUN_fan_shisheng: "范石生"
+ POLITICS_YUNNAN_FAN_SHISHENG_ARMY_DESC:0 "§Y生于：§!§L1891年；大清帝国、云南省玉溪§!\n§Y背景：§!§L与大部分滇军军官不同，范石生并非军人出身。他曾是中医，还当过教师，直到他的世交李鸿祥介绍入新军蔡锷部任文书。他就此醉心于革命运动，弃笔从戎，加入蔡锷的麾下，可国民党人为了统一中国而一路进行不断的战争与失败，让范石生最终从军中退役，返回云南，在昆明当起了医生。原本的他将远离政治，归于平凡，直到范石生引起了唐继尧的注意。他们二人在革命时期就是老相识了，唐继尧也成功说服他的老战友重返军队。现在，范石生把他的长袍和人力车换成了军服和步枪，投身正在恢复元气的共和运动。§!"
+ YUN_zhang_lingfu: "张灵甫"
+ POLITICS_YUNNAN_ZHANG_LINGFU_ARMY_DESC:0 "§Y生于：§!§L1903年8月20日；大清帝国、陕西省西安§!\n§Y背景：§!§L张灵甫最初渴望成为一名知识分子，并于1923年考入北京大学历史系，但由于无力支付学费，从而转投了胡景翼的国民二军驻豫军官训练团。后在军中偶遇于右任，经其推荐南下广州，于当年考入黄埔军校第四期。\n\n张灵甫全方位接受了黄埔思想和教育，后被编入国民革命军第21师，任步兵排见习官，并在北伐战争中作为第一师的一员参战。北伐失败后，张灵甫跟随第一军且战且退至贵州，随后唐继尧为国民党残部提供了庇护。张灵甫在战后展现出了杰出的能力和主动性，成为国民党军队中一颗冉冉升起的新星。§!"
+ YUN_zhou_baozhong: "周保中"
+ POLITICS_YUNNAN_ZHOU_BAOZHONG_ARMY_DESC:0 "§Y生于：§!§L1902年2月7日；大清帝国、云南省大理§!\n§Y背景：§!§L周保忠原名奚李元，13岁时进入大理第二中学就读，在家乡遭遇土匪袭击后辍学。接下来的两年里，他以务农为生，后来与表哥一道前往昆明加入滇军，随后又前往河南加入了冯玉祥的国民军。在反奉战争后，国民军退回西北，周保中则南下广州，成为了国民革命军第六军十九师的一名上尉军官。\n\n在贵州任职期间，周保中对新兴的社会主义运动产生了浓厚的兴趣，并对日益左倾的中央委员会颇为赞许。北伐失败后，周保中积攒了一笔充裕的资金，用以远赴巴黎与中央委员会的其他成员会合。在那里，他全方位接受了社会主义思想，并改名为周保中。\n\n1932年上海起义期间，周保中前往云南动员国民党残部加入起义，但未能如愿。如今，周保中被困在了自己的家乡云南。在云南的政治泥潭中，有传言他与现已隐退的朱德有所联系。§!"
+ YUN_zeng_zesheng: "曾泽生"
+ POLITICS_YUNNAN_ZENG_ZESHENG_ARMY_DESC:0 "§Y生于：§!§L1902年；大清帝国、云南省永善§!\n§Y背景：§!§L曾泽生是云南的少壮派共和主义军官之一。1924年自云南陆军讲武堂毕业后，又在广州加入了国民党，进入黄埔军校继续深造。但是出于对国民党内部腐败的失望，毕业后他又迁往了上海。1929年，他应邀回到云南，在讲武堂担任辅导员，自那时起，他便成了少壮派共和主义军官中进步派的领袖，为反腐倡廉和扫除贫困而奔走。§!"
+ YUN_sun_du: "孙渡"
+ YUN_An_En_Bo: "安恩溥"
+ YUN_Li_Mi: "李弥"
+ YUN_he_yingqin: "何应钦"
+ YUN_he_yingqin_sic_desc:0 "§Y生于：§!§L1890年4月2日；大清帝国、贵州省兴义§!\n§Y背景：§!§L1909年，何应钦入学声名在外的武昌陆军第三中学堂，随后，清廷考选留日学生20人前往日本东京振武学校留学，何应钦也在其中，就这样以同学身份结识了蒋介石。受同盟会反清思想的熏陶，他加入了同盟会，武昌起义后，他和同学回国参加辛亥革命，后又返日继续学业。1916年毕业后，何应钦回国，在陈其美手下短暂效力，然后应王文华将军邀请回到了家乡贵州。1921年王文华遇刺，何应钦逃离了贵州，投奔云南军阀唐继尧。\n\n1924年，孙中山创办了黄埔军校，任命何应钦为总军事教官。1925年，何应钦率领黄埔教导团参加了讨伐陈炯明的东征，连克潮州、汕头。广东平定后，何应钦在潮汕整训部队，准备北伐。在北伐中，何应钦麾下的国民革命军第一军英勇作战，但由于德国的干涉，北伐最终还是失败了。他带领第一军撤往云南，在龙云的坚持下，唐继尧被迫庇护了各路国民革命军残部。由于对中央委员会的左倾失望，在戴季陶对三民主义解释的影响下，何应钦决心进行一场不被工团主义玷污的国民革命。§!"
+ YUN_sun_yuanliang: "孙元良"
+ POLITICS_YUNNAN_SUN_YUANLIANG_ARMY_DESC:0 "§Y生于：§!§L1904年3月17日；大清帝国、四川省成都§!\n§Y背景：§!§L1922年，孙元良考入了南京高等师范学校，随后转入北京大学，在那里他遇到了中国工团党领袖李大钊，并很快被推荐加入黄埔军校。孙元良毕业于黄埔军校第一期，参加过第一、二次东征，并协助平定了反国民党的刘杨叛乱，历任排、连、营长。1926年，孙元良在北伐战争中担任第一师第一团团长。\n\n北伐战争结束后，孙元良随上级何应钦退入贵州，国民党在那里继续着斗争。在贵州期间，孙元良对炮兵产生了浓厚的兴趣，于是前往日本陆军士官学校炮兵科学习，未毕业即归国。他与张灵甫等人一同被提拔，成为了国民革命军中的新生代将领。§!"
  POLITICS_YUNNAN_ZHAO_XINGWU_DESC:0 "赵醒吾1917年考入云南省法政学校预备科。尽管由于年龄幼小让他没有参加过辛亥革命及护国战争，但这两场战争中国大地上那些动人心弦的故事却牵动了他的心结。在昆明期间，他开始阅读政治哲学，既有主流的民主运动宣言，也有在唐继尧治下被禁的共产主义宣传。他因试图在学生内部组织政治运动而被学校开除。对这种思想控制极为不满的赵醒吾决意离开云南，向东投效国民革命军。在接下来几场战斗中，他在朱培德手下效力，并展现了自己善于分析占据，拥有战略思维的特点。在这一时期，他首次加入了中国工团党，但他所希望的本党与国民党党内社会主义者的合作并不长久。北伐战争的失败摧毁了华南的民主及社会主义运动，迫使赵醒吾同他的上司朱培德一道流亡云南。在流亡期间，他同其他国民党右派流亡者保持着一定的距离。后来他开始同分散在云南各地的左派分子通信会面，并成为了云南左派内一个重要的话事人。赵醒吾从一个学生，一个士兵，一个流亡者一路走来，尽管如此这一切都没有磨平他的棱角，如今他仍然有着高超的领导能力并对社会主义抱有坚定信念。"
  POLITICS_YUNNAN_GONG_SHOU_DESC:0 "作为所在夷土司世系的最新一任家主，龚绶因他不择手段的政治投机以及对南境少数民族自治权利的狂热捍卫而闻名于世。龚绶的生名是刀樾春，辛亥革命前为为南甸宣抚司土司。在察觉到全中国各地的政治动向后，龚绶改姓为龚，并推出了一个长篇累牍的故事：他的家族祖先是明代征服云南时士兵的后代。在后革命时代的政治动荡中，以汉族身份行事活动为龚绶带来了巨大的好处，他曾经利用自己的这一身份来抵制打压夷人及削弱土司自治权的尝试。尽管这些操作最终把龚绶送进了监狱，但在刑满释放后，他仍然继续过着自己奇特的双元民族认同的日子：有时候是汉人政治家龚绶，有时候又是土司刀樾春。"
  YUN_buy_arty_tt:0 "解锁£decision_icon_small §H决议§!通过缅甸和印度支那向外国购买火炮"
@@ -138,10 +163,10 @@
  YUN_Long_Yun_takes_over_party:0 "龙云派"
  YUN_Lu_Han_takes_over_party_long:0 "靖国滇军(Jing Guo Dian Jun)\n§g叛军叛军，叛军为何而叛，对唐继尧野心的嫉妒？不，云南在往绝路上走，需要一名强而有力的领袖来拉住它。军官团和唐继尧十年不和早已是众人皆知的秘密。只是双方都不敢干起来，但最近的军事行动所带来的灾难，最终促使他们先开枪。§!"
  YUN_Lu_Han_takes_over_party:0 "卢汉派"
- YUN_Hu_Ruoyu_takes_over_party_long:0 "靖国滇军(Jing Guo Dian Jun)\n§g叛军叛军，叛军为何而叛，对唐继尧野心的嫉妒？不，云南在往绝路上走，需要一名强而有力的领袖来拉住它。军官团和唐继尧十年不和早已是众人皆知的秘密。只是双方都不敢干起来，但最近的军事行动所带来的灾难，最终促使他们先开枪。§!"
  YUN_Hu_Ruoyu_takes_over_party:0 "胡若愚派"
- YUN_Zhu_Peide_takes_over_party_long:0 "国民革命军第三军(Guomin Geming Jun Di San Jun)\n§g一支在云南的国民革命军残部，其在战场所向披靡，以及拥有出色战略的将领而闻名全国。他们对德意志帝国干涉北伐战争，导致革命满盘皆输而耿耿于怀。如今他们沦为一具空壳活尸，流亡到云南，但他们仍对唐继尧的严厉的专制政府和拥护新社会主义的国民党左派持谨慎态度。由于唐继尧的信仰，他们作为进步的共和主义派没法融入云南的军队中，只能处在一种很危险的自治中，并且也仅仅在名义上对曾庇护过他们的人保持忠诚。§!"
+ YUN_Hu_Ruoyu_takes_over_party_long:0 "靖国滇军(Jing Guo Dian Jun)\n§g叛军叛军，叛军为何而叛，对唐继尧野心的嫉妒？不，云南在往绝路上走，需要一名强而有力的领袖来拉住它。军官团和唐继尧十年不和早已是众人皆知的秘密。只是双方都不敢干起来，但最近的军事行动所带来的灾难，最终促使他们先开枪。§!"
  YUN_Zhu_Peide_takes_over_party:0 "国民革命军"
+ YUN_Zhu_Peide_takes_over_party_long:0 "国民革命军第三军(Guomin Geming Jun Di San Jun)\n§g一支在云南的国民革命军残部，其在战场所向披靡，以及拥有出色战略的将领而闻名全国。他们对德意志帝国干涉北伐战争，导致革命满盘皆输而耿耿于怀。如今他们沦为一具空壳活尸，流亡到云南，但他们仍对唐继尧的严厉的专制政府和拥护新社会主义的国民党左派持谨慎态度。由于唐继尧的信仰，他们作为进步的共和主义派没法融入云南的军队中，只能处在一种很危险的自治中，并且也仅仅在名义上对曾庇护过他们的人保持忠诚。§!"
  YUN_Zhu_De_takes_over_party_long:0 "中国农工民主党(Zhongguo Nonggong Minzhudang)\n§g与中国其他许多争论不休的左翼运动一样，中国农工民主党也是从国民党垮台后造成的权力真空中崛起的。其表面上模仿着欧美的农工党，领导层是自包括那些新兴的工团主义国家的欧洲各国的大学毕业的知识分子们。他们在反对工团主义的同时，也承认国民党老温和派的局限性和失败性，他们保证要建立一个能够将社会主义思想与行政、经济、政治体制相结合且有效运作的平台。§!"
  YUN_Long_Zhu_De_takes_over_party:0 "中国农工民主党"
  YUN_Tang_Federalist_party_long:0 "中国致公党(Zhongguo Zhigongdang)"
@@ -1719,8 +1744,6 @@
  POLITICS_YUNNAN_ACTRESS_WIFU_DESC:0 "黎莉莉1915年出生，其父母是著名的左翼国民党地下工作人员。年幼的黎莉莉加入了一个巡回歌舞团，而很少有人会想到这位来自上海的年轻女演员有一天会统治全中国。尽管背负许多质疑的目光，黎莉莉，现在的女帝天后，将成为有史以来第二名统治中国的女性。她仰慕前一位达成如此伟业的著名女帝武则天，因而自命天后，而这位新女帝将统治大唐，直到自己年幼的儿子可以即位。正如其崇拜的对象，天后渴望权力，心思缜密，冷酷无情，愿做任何事情来保持自己的权力，即使这意味着会对自己的儿子不利。为了延续已故丈夫开创的黄金时代，天后特别关注大唐在艺术和文化上的追求。以现在中国急需的精明头脑与才华教养，天后必将领导帝国度过前途未卜的黑暗时期。"
  POLITICS_YUNNAN_MONGOL_WIFU_DESC:0 "女帝忽秃伦，或她曾经的名字采恩皮勒，1905年出生的这位蒙古贵族，年轻时大部分时间生活在博克多汗的宫廷里。现在，她统治大唐，成为自元朝以后又一位统治中国的蒙古皇帝，也是有史以来第二位坐上龙椅的女性。忽秃伦的名字来自于忽必烈和成吉思汗著名的女性后裔，而这位新女帝将统治大唐，直到自己年幼的儿子可以即位。在努力维持已故丈夫开创的黄金时代的同时，她也试图整治丈夫留下的许多在道义上遭受质疑的遗产，纠正她所认为帝国目前最大的问题，即鸦片滥用和军队衰退。以中国需要的坚定而谨慎的手腕，忽秃伦必将领导帝国度过前途未卜的黑暗时期。"
  POLITICS_YUNNAN_LI_TANGLARP_DESC:0 "唐继虞，前任皇帝的二弟，如今继承了旧唐开国皇朝的名号，自号唐礼宗，成为了新唐的第二任皇帝。在兄长突然离世之后，唐礼宗为了防止因身为“正统继承人”的少主太小，无法统治而出现继承危机，接任了皇帝之位。唐礼宗曾在国民党军队中受训，在灾难性的北伐战争后跟随兄长来到云南。他和亲人相依为命，牢牢追随兄长，并最终乘着雄心勃勃的浪潮登上了云南乃至全中国最高贵的位置。现在，龙椅的新主人必须亲自掌管这个稚嫩的王朝，并将大唐从崩溃中拯救出来，以免兄长与旧唐先祖的梦想毁于一旦。"
- POLITICS_YUNNAN_TANG_KING_DESC:0 "唐继尧曾经是蔡锷将军的忠实追随者，现在他已和自己的老朋友和过去的心境一刀两断，开始追求自己的辉煌，誓要打下自己的中华江山。他放弃了与国民党和联省主义者的联系，因为这些傻瓜除了背叛他外什么也不会做。在鸦片与神妙的幻境的推动下，唐继尧宣布自己是云南王和旧唐的合法继承者。过去灾难性的北伐与面对国民革命军的败绩困扰着他过去十年的军事生涯，但唐继尧现在比以往任何时候都坚定地想要纠正过去的错误，恢复名誉，新建皇朝。这位云南王已磨砺意志，下定决心，将从昆明的山区策马奔驰而出，夺回自己与生俱来的权利——或者殒命其中。困守群山之中，灰心丧气地等待寿命大限的时期早已过去——现在是胜利、凯旋和复仇的时候了！"
- POLITICS_YUNNAN_TANG_EMPEROR_DESC:0 "曾经的云南王实现了不可能的伟业——全中国现在都在他的龙座之下，曾经占据中华大地的军阀和篡位者皆已伏法，屈膝于前。唐继尧登上了属于自己的龙椅，为纪念旧唐的开国皇帝，自命高祖。大唐如今再次统治全中国，骄傲的道家后裔居于众人之上。虽然经过了一场场艰苦的战争，人民血流成河，但随着唐高祖巩固自己的新帝国，中国可能再次迎来和平与繁荣。"
  YUN_based_path_returns:0 "如凤凰般涅槃"
  YUN_based_path_returns_desc:0 "大唐又一次从历史的灰烬中崛起，又一次闪耀在世人眼前。东山再起的唐继尧试图消除他眼中的现代颓废，让中国回归到更加纯净和辉煌的时代。他认为初唐是中国文化的黄金时代，中国国力的鼎盛时期。现在这位来自云南的将军要拨乱反正，重现这段历史。"
  YUN_yeet_republicans:0 "粉碎辛亥之梦"
