--- a/localisation/KX_Guides_gui_l_simp_chinese.yml
+++ b/localisation/KX_Guides_gui_l_simp_chinese.yml
@@ -597,3 +597,6 @@
  guides.1004.t:0 "东突厥斯坦指南"
  guides.1004.d:0 "问：红月亮？\n\n答：让东突厥斯坦打赢新疆内战，然后让铁木尔存活，完成国策“阅兵式”，在“艰难抉择”事件中选“联手制定计划”，在铁木尔被劫持事件中选“大吼一声”，随后走完事件链即可。"
  guides.1004.a:0 "帅到"
+ guides.1005.t:0 "四川指南"
+ guides.1005.d:0 "问：武备系？\n答：内战开始时，选择从遂宁撤退到三台和绵阳。在内江之战中，选择炸桥。在“选择攻击方案”事件中，选择攻击重庆。在重庆之战中，选择先拿下周围高地，内战会在几天后结束。在“会见邓锡侯”事件中，选择接受会让杨森继续掌权，选择拒绝会让刘存厚夺权。\n\n问：保定系？\n答：不要在内战开始时选择从遂宁撤退到三台和绵阳，也不要在内江之战中选择炸桥，然后保定系就会掌权。在“动员西康部队”事件中，选择增援成都。在灌县之战中，选择把宝瓶口堵上，内战会在几天后结束。\n\n问：实业团？\n答：走与武备系相同的路线，直到“选择攻击方案”事件。在“选择攻击方案”事件中，选择分兵，实业团会在几天后掌权并结束内战。\n\n问：军官系？\n答：走与武备系相同的路线，直到“选择攻击方案”事件。在“选择攻击方案”事件中，选择攻击简阳。在自流井之战中，不要选择诈败佯攻，军官系会在几天后掌权并结束内战。\n\n问：直系残党？\n答：大清政变成功，四川是武备系，直系就会流亡过来，选择接受。\n\n问：流亡联省派\n答：让陈炯明被赶出两广，然后让保定系或军官系掌权。陈炯明一个月后来到四川。"
+ guides.1005.a:0 "帅到"
