--- a/localisation/KR_Yunnan_l_simp_chinese.yml
+++ b/localisation/KR_Yunnan_l_simp_chinese.yml
@@ -26,6 +26,7 @@
  YUN_zhu_de: "朱德"
  POLITICS_YUNNAN_ZHU_DE_DESC:0 "朱德是白手起家的典型人物，当年在四川的农村中，朱德不过是一个无足轻重的当地贫农，一个一无所有的佃农。当他9岁时，他被一个有钱的叔叔收养，随后被送到了云南讲武堂深造。在讲武堂读书时，他加入了国民党的前身，也就是同盟会。接下来，朱德在动乱的中国四处漂泊，跟随国民革命军于各条战线上奋战，他为各个派系尽忠，也认识了不少人。他曾经到过四川，去过上海和西藏，甚至还在柏林留过学，而冥冥中的天意将他带回云南。最近他威胁到了云南军阀唐继尧的统治，因此被迫辞去了在国民革命军中的职务，由于不想再次离家出走四处漂泊，朱德只好承诺不问政事。\n朱德原本以为他未来的结局就是在云南讲武堂中靠当教官度过余生，但唐继尧倒台和云南大乱的消息让他重燃斗志。朱德的目标很简单，他要成为比云南曾经的独裁军头更出色的领导人，他要在云南，建立起他所钻研的、教导的、那个无比理想、集道德和责任于一身的民主制度。"
  POLITICS_YUNNAN_ZHU_DE_ARMY_DESC:0 "§Y指挥官介绍\n§Y生于：§L\n1886年12月1日\n大清帝国，四川，仪陇\n§Y军旅生涯：§L\n朱德是白手起家的典型人物，当年在四川的农村中，朱德不过是一个无足轻重的当地贫农，一个一无所有的佃农。九岁时，他被一个有钱的叔叔收养，随后被送到了云南讲武堂深造。在读期间，他加入了国民党的前身——同盟会。接下来，朱德在动乱的中国四处漂泊，跟随国民革命军在各条战线上奋战，为各个派系服务，并结识了广大的人脉。他曾经到过四川，去过上海和西藏，甚至还在柏林留过学，而冥冥中的天意将他带回云南。近年来，他与军阀唐继尧的专制主义发生了冲突，被迫辞去了在国民革命军中的职务，由于不想再次离家出走四处漂泊，朱德只好承诺不问政事。\n朱德的目标很简单，就是在云南建立一个他梦寐以求的负责的民主制度。"
+ YUN_Ma_Ben_Zai: "马本斋"
  YUN_jin_handing: "金汉鼎"
  POLITICS_YUNNAN_JIN_HANDING_ARMY_DESC:0 "§Y生于：§!§L1887年；大清帝国、云南省玉溪县§!\n§Y背景：§!§L金汉鼎作为蔡锷将军攻打四川期间的得力干将，曾经前途无比光明。1922年，为铺平北伐的道路，他被任命为云南代理省长。但在他任职仅一个月后，就被唐继尧逼宫下野。被赶下云南省长一职的他决定加入蒋介石的部队，可国民党的失败则再度打破了金汉鼎的雄心壮志。意想不到的是，在他以为自己就要一声不吭的流亡国外时，唐继尧却在满清复辟后向他伸出了橄榄枝，邀请他回到昆明。共和派缺少有经验的军官，因此唐继尧和金汉鼎不得不放下对彼此的成见，为不可避免的北伐做准备。当这群民主派舔舐伤口时，金汉鼎在闲暇之余还遇上了他的几个老相识，比如他的军校同学朱德。除了军官的身份，金汉鼎还是一名著名的禁烟者，他在国民革命军中掀起了一次大规模的禁酒、禁烟、禁鸦片的政治运动。§!"
  YUN_chen_cheng: "陈诚"
